# flwr-test-pb

./: README.md  pyproject.toml
fl_test_1/: __init__.py  client_app.py  server_app.py  task.py
