[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-test-1"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "JustinJY"

[tool.flwr.app.components]
serverapp = "fl_test_1.server_app:app"
clientapp = "fl_test_1.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "researchgrid"

[tool.flwr.federations.researchgrid]
address = "researchgrid.flower.ai"
enable-user-auth = true
options.num-supernodes = 5
